# py-key-value

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .pr_agent.toml  404.html  AGENTS.md  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  package.json  py-key-value.code-workspace  pyproject.toml  sitemap.xml  sonar-project.properties
examples/chat_app/: README.md  __init__.py  chat_app.py  pyproject.toml  requirements.txt  test_chat_app.py
examples/trading_data/: README.md  __init__.py  pyproject.toml  requirements.txt  test_trading_app.py  trading_app.py
examples/web_scraper_cache/: README.md  __init__.py  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
key-value/key-value-aio/: AIO_CODE_REVIEW.md  README.md  pyproject.toml
key-value/key-value-aio/src/key_value/aio/errors/: __init__.py  key_value.py  store.py
key-value/key-value-aio/src/key_value/aio/protocols/: key_value.py
key-value/key-value-aio/src/key_value/aio/stores/: __init__.py  base.py
key-value/key-value-aio/src/key_value/aio/utils/: __init__.py  acompat.py  managed_entry.py  sanitize.py  serialization.py
key-value/key-value-aio/src/key_value/aio/wrappers/: base.py
key-value/key-value-aio/tests/: cases.py  conftest.py
key-value/key-value-aio/tests/_shared_test/: cases.py
key-value/key-value-aio/tests/adapters/: test_base_model.py  test_dataclass.py  test_pydantic.py  test_raise.py
key-value/key-value-aio/tests/stores/: base.py  conftest.py
key-value/key-value-aio/tests/stores/aerospike/: test_aerospike.py
key-value/key-value-aio/tests/stores/cassandra/: test_cassandra.py
key-value/key-value-aio/tests/stores/disk/: test_disk.py  test_multi_disk.py
key-value/key-value-aio/tests/stores/duckdb/: test_duckdb.py
key-value/key-value-aio/tests/stores/dynamodb/: __init__.py  test_dynamodb.py
key-value/key-value-aio/tests/stores/elasticsearch/: test_elasticsearch.py
key-value/key-value-aio/tests/stores/filetree/: test_filetree.py
key-value/key-value-aio/tests/stores/firestore/: test_firestore.py
key-value/key-value-aio/tests/stores/keychain/: test_keychain.py
key-value/key-value-aio/tests/stores/keyring/: test_keyring.py
key-value/key-value-aio/tests/stores/libsecret/: test_libsecret.py
key-value/key-value-aio/tests/stores/memcached/: test_memcached.py
key-value/key-value-aio/tests/stores/memory/: test_memory.py
key-value/key-value-aio/tests/stores/mongodb/: test_mongodb.py
key-value/key-value-aio/tests/stores/opensearch/: __init__.py  test_opensearch.py
key-value/key-value-aio/tests/stores/postgresql/: test_postgresql.py
key-value/key-value-aio/tests/stores/redis/: test_redis.py
key-value/key-value-aio/tests/stores/registry/: test_registry.py
key-value/key-value-aio/tests/stores/rocksdb/: test_rocksdb.py
key-value/key-value-aio/tests/stores/s3/: test_s3.py
key-value/key-value-aio/tests/stores/simple/: test_store.py
key-value/key-value-aio/tests/stores/sqlite/: __init__.py  test_sqlite.py
key-value/key-value-aio/tests/stores/valkey/: docker-compose-cluster.yml  test_valkey.py  test_valkey_cluster.py
key-value/key-value-aio/tests/stores/vault/: test_vault.py
key-value/key-value-aio/tests/stores/windows/: test_windows.py
key-value/key-value-aio/tests/stores/windows_registry/: test_windows_registry.py
key-value/key-value-aio/tests/stores/wrappers/: test_bulkhead.py  test_circuit_breaker.py  test_clamp_ttl.py  test_compression.py  test_encryption.py  test_fallback.py  test_limit_size.py  test_passthrough_cache.py  test_prefix_collection.py  test_prefix_key.py  test_rate_limit.py  test_read_only.py  test_retry.py  test_routing.py  test_single_collection.py  test_statistics.py  test_timeout.py  test_versioning.py
key-value/key-value-aio/tests/utils/: test_time_to_live.py
key-value/key-value-aio/tests/wrappers/migration/: test_wrapper.py
key-value/key-value-aio/tests/wrappers/sanitization_migration/: __init__.py  test_wrapper.py
key-value/key-value-shared/: README.md  pyproject.toml
key-value/key-value-shared-test/: README.md  pyproject.toml
key-value/key-value-shared-test/src/key_value/shared_test/: cases.py
key-value/key-value-shared/src/key_value/shared/code_gen/: gather.py  run.py  sleep.py
key-value/key-value-shared/src/key_value/shared/errors/: __init__.py  base.py  key_value.py
key-value/key-value-shared/src/key_value/shared/stores/: wait.py
key-value/key-value-shared/src/key_value/shared/type_checking/: bear_spray.py
key-value/key-value-shared/src/key_value/shared/utils/: compound.py  managed_entry.py  sanitization.py  sanitization_strategy.py  sanitize.py  serialization.py  time_to_live.py
key-value/key-value-shared/tests/utils/: test_compound.py  test_managed_entry.py  test_sanitization.py  test_sanitization_strategy.py  test_sanitize.py  test_serialization.py  test_time_to_live.py
key-value/key-value-sync/: README.md  pyproject.toml
key-value/key-value-sync/src/key_value/sync/adapters/: __init__.py
key-value/key-value-sync/src/key_value/sync/code_gen/: test.py
key-value/key-value-sync/src/key_value/sync/errors/: __init__.py
key-value/key-value-sync/src/key_value/sync/protocols/: __init__.py
key-value/key-value-sync/tests/code_gen/: cases.py  conftest.py
key-value/key-value-sync/tests/code_gen/adapters/: test_base_model.py  test_dataclass.py  test_pydantic.py  test_raise.py
key-value/key-value-sync/tests/code_gen/protocols/: test_types.py
key-value/key-value-sync/tests/code_gen/stores/: base.py  conftest.py
key-value/key-value-sync/tests/code_gen/stores/aerospike/: test_aerospike.py
key-value/key-value-sync/tests/code_gen/stores/disk/: test_disk.py  test_multi_disk.py
key-value/key-value-sync/tests/code_gen/stores/duckdb/: __init__.py  test_duckdb.py
key-value/key-value-sync/tests/code_gen/stores/elasticsearch/: test_elasticsearch.py
key-value/key-value-sync/tests/code_gen/stores/firestore/: __init__.py  (+1 more)
key-value/key-value-sync/tests/code_gen/utils/: test_managed_entry.py  test_sanitize.py
(+515 files in other folders)
