[project]
name = "py-key-value"
version = "0.2.8"
description = "Key-Value Store Project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}


[tool.uv.workspace]
members = [
    "key-value/key-value-aio",
    "key-value/key-value-sync",
    "key-value/key-value-shared",
    "key-value/key-value-shared-test",
]

[tool.ruff]
target-version = "py310"
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812",
    "PLR0913", # Too many arguments, MCP Servers have a lot of arguments, OKAY?!
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "E501", # Ignore line length
]

[dependency-groups]
dev = [
    "ast-comments>=1.2.3",
    "basedpyright>=1.32.1",
    "dirty-equals>=0.10.0",
    "diskcache-stubs>=5.6.3.6.20240818",
    "docker>=7.1.0",
    "inline-snapshot>=0.30.1",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportExplicitAny = false
reportMissingTypeStubs = false
exclude = [
    "**/playground/**",
    "**/examples/**",
    "**/references/**",
    "**/docs/**",
    "**/.venv/**",
]
