[project]
name = "py-key-value-aio"
version = "0.3.0"
description = "Async Key-Value Store - A pluggable interface for KV Stores"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beartype>=0.20.0",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["key_value.aio", "key_value.shared"]

[project.optional-dependencies]
memory = ["cachetools>=5.0.0"]
disk = ["diskcache>=5.0.0", "pathvalidate>=3.3.1"]
filetree = ["aiofile>=3.5.0", "anyio>=4.4.0"]
redis = ["redis>=4.3.0"]
mongodb = ["pymongo>=4.0.0"]
valkey = ["valkey-glide>=2.1.0"]
vault = ["hvac>=2.3.0", "types-hvac>=2.3.0"]
memcached = ["aiomcache>=0.8.0"]
elasticsearch = ["elasticsearch>=8.0.0", "aiohttp>=3.12"]
opensearch = ["opensearch-py[async]>=2.0.0"]
dynamodb = ["aioboto3>=13.3.0", "types-aiobotocore-dynamodb>=2.16.0"]
s3 = ["aioboto3>=13.3.0", "types-aiobotocore-s3>=2.16.0"]
keyring = ["keyring>=25.6.0"]
keyring-linux = ["keyring>=25.6.0", "dbus-python>=1.4.0"]
pydantic = ["pydantic>=2.11.9"]
aerospike = ["aerospike>=16.0.0"]
rocksdb = [
    "rocksdict>=0.3.24 ; python_version >= '3.12'",
    "rocksdict>=0.3.2 ; python_version < '3.12'"
]
duckdb = ["duckdb>=1.1.1", "pytz>=2025.2"]
postgresql = ["asyncpg>=0.30.0"]
firestore = ["google-cloud-firestore>=2.13.0", "google-auth>=2.24.0"]
couchbase = ["couchbase>=4.3.0"]
wrappers-encryption = ["cryptography>=45.0.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocstrings-python>=1.10.0"
]

[dependency-groups]
dev = [
    "py-key-value-aio[memory,disk,filetree,redis,elasticsearch,opensearch,memcached,mongodb,vault,dynamodb,s3,rocksdb,duckdb,firestore,postgresql,couchbase]",
    "py-key-value-aio[valkey]; platform_system != 'Windows'",
    "py-key-value-aio[aerospike]; platform_system != 'Windows'",
    "py-key-value-aio[keyring]",
    "py-key-value-aio[pydantic]",
    "py-key-value-aio[wrappers-encryption]",
    "ast-comments>=1.2.3",
    "basedpyright>=1.32.1",
    "dirty-equals>=0.10.0",
    "diskcache-stubs>=5.6.3.6.20240818",
    "docker>=7.1.0",
    "inline-snapshot>=0.30.1",
    "testcontainers[redis,mongodb,elasticsearch,memcached,vault,generic]>=4.10.0",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--inline-snapshot=disable",
    "-n=auto",
    "--dist=loadfile",
    "--maxfail=5"
]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
timeout = 10
timeout_func_only = true
env_files = [".env"]

[tool.ruff]
target-version = "py310"
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812",
    "PLR0913",
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]
line-length = 140

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101",
    "S105",
    "S106",
    "DTZ005",
    "PLR2004",
    "E501",
    "ARG001",
    "ARG002",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportExplicitAny = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = true
include = [
    "src",
    "tests"
]
exclude = [
    "**/playground/**",
    "**/node_modules/**",
    "**/examples/**",
    "**/references/**",
    "**/docs/**",
    "**/.venv/**",
]
