[project]
name = "chat-app-example"
version = "0.1.0"
description = "Simple async chat application using py-key-value"
requires-python = ">=3.10"
dependencies = [
    "py-key-value-aio[memory]>=0.2.8",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
