[project]
name = "py-key-value-aio"
version = "0.2.8"
description = "Async Key-Value"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "py-key-value-shared==0.2.8",
]


[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "key_value.aio"

[tool.uv.sources]
py-key-value-shared = { workspace = true }
py-key-value-shared-test = { workspace = true }

[project.optional-dependencies]
memory = ["cachetools>=6.0.0"]
disk = ["diskcache>=5.6.0", "pathvalidate>=3.3.1",]
redis = ["redis>=4.3.0"]
mongodb = ["pymongo>=4.15.0"]
valkey = ["valkey-glide>=2.1.0"]
vault = ["hvac>=2.3.0", "types-hvac>=2.3.0"]
memcached = ["aiomcache>=0.8.0"]
elasticsearch = ["elasticsearch>=9.0.0", "aiohttp>=3.12"]
dynamodb = ["aioboto3>=13.3.0", "types-aiobotocore-dynamodb>=2.16.0"]
keyring = ["keyring>=25.6.0"]
keyring-linux = ["keyring>=25.6.0", "dbus-python>=1.4.0"]
pydantic = ["pydantic>=2.11.9"]
rocksdb = ["rocksdict>=0.3.0"]
wrappers-encryption = ["cryptography>=45.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--inline-snapshot=disable",
    "-n=auto",
    "--dist=loadfile",
]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
timeout = 10

env_files = [".env"]

[dependency-groups]
dev = [
    "py-key-value-aio[memory,disk,redis,elasticsearch,memcached,mongodb,vault,dynamodb,rocksdb]",
    "py-key-value-aio[valkey]; platform_system != 'Windows'",
    "py-key-value-aio[keyring]",
    "py-key-value-aio[pydantic]",
    "py-key-value-aio[wrappers-encryption]",
    "py-key-value-shared-test",
    "basedpyright>=1.32.1",
    "dirty-equals>=0.10.0",
    "diskcache-stubs>=5.6.3.6.20240818",
    "docker>=7.1.0",
    "inline-snapshot>=0.30.1",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff]
extend="../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"
