[project]
name = "py-key-value-aio"
version = "0.3.0"
description = "Async Key-Value"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beartype>=0.20.0",
    "typing-extensions>=4.15.0",
]


[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "key_value.aio"

[tool.uv.sources]

[project.optional-dependencies]
memory = ["cachetools>=5.0.0"]
disk = ["diskcache>=5.0.0", "pathvalidate>=3.3.1",]
filetree = ["aiofile>=3.5.0", "anyio>=4.4.0"]
redis = ["redis>=4.3.0"]
mongodb = ["pymongo>=4.0.0"]
valkey = ["valkey-glide>=2.1.0"]
vault = ["hvac>=2.3.0", "types-hvac>=2.3.0"]
memcached = ["aiomcache>=0.8.0"]
elasticsearch = ["elasticsearch>=8.0.0", "aiohttp>=3.12"]
dynamodb = ["aioboto3>=13.3.0", "types-aiobotocore-dynamodb>=2.16.0"]
s3 = ["aioboto3>=13.3.0", "types-aiobotocore-s3>=2.16.0"]
keyring = ["keyring>=25.6.0"]
keyring-linux = ["keyring>=25.6.0", "dbus-python>=1.4.0"]
pydantic = ["pydantic>=2.11.9"]
aerospike = ["aerospike>=16.0.0"]
rocksdb = [
    "rocksdict>=0.3.24 ; python_version >= '3.12'", # RocksDB 0.3.24 is the first version to support Python 3.13
    "rocksdict>=0.3.2 ; python_version < '3.12'"
]
duckdb = ["duckdb>=1.1.1", "pytz>=2025.2"]
postgresql = ["asyncpg>=0.30.0"]
wrappers-encryption = ["cryptography>=45.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--inline-snapshot=disable",
    "-n=auto",
    "--dist=loadfile",
    "--maxfail=5"
]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
timeout = 10
timeout_func_only = true

env_files = [".env"]

[dependency-groups]
dev = [
    "py-key-value-aio[memory,disk,filetree,redis,elasticsearch,memcached,mongodb,vault,dynamodb,s3,rocksdb,duckdb,postgresql]",
    "py-key-value-aio[valkey]; platform_system != 'Windows'",
    "py-key-value-aio[aerospike]; platform_system != 'Windows'",
    "py-key-value-aio[keyring]",
    "py-key-value-aio[pydantic]",
    "py-key-value-aio[wrappers-encryption]",
    "py-key-value[dev]",
]

[tool.ruff]
extend="../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"
