[project]
name = "py-key-value-shared-test"
version = "0.3.0"
description = "Shared Key-Value Test"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]



[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "key_value.shared_test"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "dirty-equals>=0.10.0",
    "docker>=7.1.0",
    "inline-snapshot>=0.30.1",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff]
extend="../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"

executionEnvironments = [
  { root = "tests", reportPrivateUsage = false, extraPaths = ["src"]},
  { root = "src" }
]