[project]
name = "py-key-value-shared"
version = "0.2.6"
description = "Shared Key-Value"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typing-extensions>=4.15.0",
    "beartype>=0.22.2",
]



[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "key_value.shared"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--inline-snapshot=disable","-vv","-s"]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
timeout = 10



env_files = [".env"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "pytest-dotenv>=0.5.2",
    "dirty-equals>=0.10.0",
    "inline-snapshot>=0.29.0",
    "basedpyright>=1.31.5",
    "pytest-timeout>=2.4.0",
    "py-key-value-shared-test>=0.2.0",
]

[tool.uv.sources]
py-key-value-shared-test = { workspace = true }

[tool.ruff]
extend="../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"

executionEnvironments = [
  { root = "tests", reportPrivateUsage = false, extraPaths = ["src"]},
  { root = "src" }
]
