[project]
name = "py-key-value-sync"
version = "0.2.8"
description = "Sync Key-Value"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "py-key-value-shared==0.2.8",
    "beartype>=0.20.0",
]

[tool.uv.sources]
py-key-value-shared = { workspace = true }
py-key-value = { workspace = true }
py-key-value-shared-test = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "key_value.sync"

[project.optional-dependencies]
memory = ["cachetools>=5.0.0"]
disk = ["diskcache>=5.0.0", "pathvalidate>=3.3.1",]
filetree = ["anyio>=4.4.0"]
redis = ["redis>=4.3.0"]
mongodb = ["pymongo>=4.0.0"]
valkey = ["valkey-glide-sync>=2.1.0"]
vault = ["hvac>=2.3.0", "types-hvac>=2.3.0"]
memcached = ["aiomcache>=0.8.0"]
elasticsearch = ["elasticsearch>=8.0.0", "aiohttp>=3.12"]
pydantic = ["pydantic>=2.11.9"]
keyring = ["keyring>=25.6.0"]
keyring-linux = ["keyring>=25.6.0", "dbus-python>=1.4.0"]
rocksdb = [
    "rocksdict>=0.3.24 ; python_version >= '3.12'", # RocksDB 0.3.24 is the first version to support Python 3.13
    "rocksdict>=0.3.2 ; python_version < '3.12'"
]
duckdb = ["duckdb>=1.1.1", "pytz>=2025.2"]
wrappers-encryption = ["cryptography>=45.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--inline-snapshot=disable",
    "-n=auto",
    "--dist=loadfile",
    "--maxfail=5"
]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
timeout = 10
timeout_func_only = true

env_files = [".env"]

[dependency-groups]
dev = [
    "py-key-value-sync[memory,disk,filetree,redis,elasticsearch,memcached,mongodb,vault,rocksdb,duckdb]",
    "py-key-value-sync[valkey]; platform_system != 'Windows'",
    "py-key-value-sync[pydantic]",
    "py-key-value-sync[keyring]",
    "py-key-value-sync[wrappers-encryption]",
    "py-key-value[dev]",
]

[tool.ruff]
extend="../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"

exclude = [
    "src/key_value/sync/code_gen/stores/redis/store.py"
]